# pydsa

./: .gitignore  README.md  build_index.py  pyproject.toml  sweep.py  sweep2.py  test_run.py
.github/workflows/: test.yml
pydsa/: __init__.py  __main__.py
pydsa/algorithms/arrays/: 1_bit_and_2_bit_characters.py  4sum_ii.py  absolute_difference_between_maximum_and_minimum_k_elements.py  accepted_candidates_from_the_interviews.py  account_balance.py  actors_and_directors_cooperated_three_times.py  ad_free_sessions.py  add_minimum_number_of_rungs.py  adjacent_increasing_subarrays_detection_i.py  adjacent_increasing_subarrays_detection_ii.py  alert_using_same_key_card_three_or_more_times_in_a_one_hour_period.py  all_divisions_with_the_highest_score_of_a_binary_array.py  alternating_groups_i.py  alternating_groups_ii.py  amount_of_new_area_painted_each_day.py  analyze_subscription_conversion.py  analyze_user_website_visit_pattern.py  apple_redistribution_into_boxes.py  apply_discount_every_n_orders.py  apply_discount_to_prices.py  apply_operations_to_an_array.py  apply_operations_to_make_all_array_elements_equal_to_zero.py  apply_operations_to_make_sum_of_array_greater_than_or_equal_to_k.py  apply_operations_to_maximize_frequency_score.py  apply_operations_to_maximize_score.py  apply_transform_over_each_element_in_array.py  arithmetic_subarrays.py  arrange_table_by_gender.py  (+1000 more)
pydsa/api/: server.py
pydsa/core/: __init__.py  engine.py  exceptions.py  models.py  registry.py  router.py  tracer.py
pydsa/search/: __init__.py  embeddings.py
pydsa/tests/: test_engine.py
(+2912 files in other folders)
