[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydsa"
version = "0.1.0"
description = "A semantic DSA execution engine."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "K. Abhi Ram Reddy"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rapidfuzz>=3.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sortedcontainers>=2.4.0",
    "sentence-transformers>=2.2.2",
    "rich>=13.0.0",
    "fastapi[standard]",
    "uvicorn[standard]",
    "pydantic",
    "pyperclip>=1.8.0",
    "pytest"
]

[project.optional-dependencies]
search = [
    "sentence-transformers>=2.2.2",
]

[tool.setuptools.packages.find]
include = ["pydsa", "pydsa.*"]

[project.scripts]
pydsa = "pydsa.__main__:main"

[tool.setuptools.package-data]
"pydsa.search" = ["*.npy"]